--- a/app/static/css/style.css
+++ b/app/static/css/style.css
@@ -9,7 +9,7 @@
 
 body{
     background-color: #c9d6ff;
-    background: linear-gradient(to right, #e2e2e2, #c9d6ff);
+    background: url(../img/bglogin.jpg);
     display: flex;
     align-items: center;
     justify-content: center;
@@ -19,8 +19,9 @@ body{
 
 .container{
     background-color: #fff;
+    color: #4D4D4D;
     border-radius: 30px;
-    box-shadow: 0 5px 15px rgba(0, 0, 0, 0.35);
+    box-shadow: 0 5px 15px rgba(77, 77, 77, 0.3);
     position: relative;
     overflow: hidden;
     width: 768px;
@@ -47,7 +48,7 @@ body{
 }
 
 .container button{
-    background-color: #512da8;
+    background-color: #E60012;
     color: #fff;
     font-size: 12px;
     padding: 10px 45px;
@@ -163,7 +164,7 @@ body{
 .toggle{
     background-color: #512da8;
     height: 100%;
-    background: linear-gradient(to right, #5c6bc0, #512da8);
+    background: linear-gradient(to right, #E60012, #4D4D4D);
     color: #fff;
     position: relative;
     left: -100%;
@@ -190,6 +191,7 @@ body{
     top: 0;
     transform: translateX(0);
     transition: all 0.6s ease-in-out;
+    color: #fff;
 }
 
 .toggle-left{
