--- a/app/templates/login_register.html
+++ b/app/templates/login_register.html
@@ -29,8 +29,8 @@
       <div class="form-container sign-up">
         <form method="POST" action="{{ url_for('main.register') }}">
           <h1>Buat Akun</h1>
-          <span>Daftarkan diri Anda sebagai pengguna</span>
-          <input type="text" name="name" placeholder="Nama Lengkap" required />
+          <span>Gunakan email Anda untuk mendaftar</span>
+          <input type="text" name="name" placeholder="Nama" required />
           <input type="email" name="email" placeholder="Email" required />
           <input
             type="password"
