--- a/app/templates/login_register.html
+++ b/app/templates/login_register.html
@@ -27,6 +27,9 @@
 
       <!-- REGISTER FORM -->
       <div class="form-container sign-up">
+        <div class="logo-container logo-right">
+          <img src="{{ url_for('static', filename='img/Telkom_Indonesia_2013.svg') }}" alt="Telkom Logo" class="telkom-logo">
+        </div>
         <form method="POST" action="{{ url_for('main.register') }}">
           <h1>Buat Akun</h1>
           <span>Gunakan email Anda untuk mendaftar</span>
@@ -44,6 +47,9 @@
 
       <!-- LOGIN FORM -->
       <div class="form-container sign-in">
+        <div class="logo-container logo-left">
+          <img src="{{ url_for('static', filename='img/Telkom_Indonesia_2013.svg') }}" alt="Telkom Logo" class="telkom-logo">
+        </div>
         <form method="POST" action="{{ url_for('main.login') }}">
           <h1>Masuk</h1>
           <span>Masukkan email dan password Anda</span>
