--- a/app/templates/dashboard_user.html
+++ b/app/templates/dashboard_user.html
@@ -18,7 +18,7 @@
                 <div class="col-md-4 text-end">
                     <div class="user-info">
                         <span class="user-welcome">Halo, {{ session.get('user_name', 'Pengguna') }}!</span>
-                        <a href="{{ url_for('main.logout') }}" class="btn btn-outline-danger btn-sm ms-2">
+                        <a href="{{ url_for('main.logout_user') }}" class="btn btn-outline-danger btn-sm ms-2">
                             <i class="fas fa-sign-out-alt me-1"></i>Logout
                         </a>
                     </div>
