--- a/app/templates/prediction.html
+++ b/app/templates/prediction.html
@@ -16,7 +16,7 @@
                 <li class="nav-item"><a class="nav-link" href="{{ url_for('main.data') }}">Data Aset</a></li>
                 <li class="nav-item"><a class="nav-link" href="{{ url_for('main.visualization') }}">Visualisasi</a></li>
                 <li class="nav-item">
-                    <a class="nav-link text-warning" href="{{ url_for('main.logout') }}">
+                    <a class="nav-link text-warning" href="{{ url_for('main.logout_user') }}">
                         <i class="fas fa-sign-out-alt me-1"></i>Logout
                     </a>
                 </li>
